--- a/people.html
+++ b/people.html
@@ -16,7 +16,7 @@ permalink: /people/
     
     <div style="display: flex; gap: 2rem; align-items: flex-start; flex-wrap: wrap;">
         <div style="flex: 0 0 200px;">
-            <img src="images/hooman.png" alt="Dr. Hooman Derakhshani" loading="lazy" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);" onerror="this.src='https://via.placeholder.com/200x200?text=HD'">
+            <img src="{{ '/images/hooman.png' | relative_url }}" alt="Dr. Hooman Derakhshani" loading="lazy" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);" onerror="this.src='https://via.placeholder.com/200x200?text=HD'">
         </div>
         
         <div style="flex: 1; min-width: 300px;">
@@ -41,7 +41,7 @@ permalink: /people/
 
 <div style="display: flex; gap: 2rem; margin-bottom: 2rem;">
     <div style="flex: 0 0 150px;">
-        <img src="images/zisanur.png" alt="Dr. Rahman" loading="lazy" style="width: 100%; border-radius: 50%; object-fit: cover; aspect-ratio: 1/1;" onerror="this.src='https://via.placeholder.com/150?text=ZR'">
+        <img src="{{ '/images/zisanur.png' | relative_url }}" alt="Dr. Rahman" loading="lazy" style="width: 100%; border-radius: 50%; object-fit: cover; aspect-ratio: 1/1;" onerror="this.src='https://via.placeholder.com/150?text=ZR'">
     </div>
     <div>
         <h3 style="margin-top: 0;">Dr. A S M Zisanur Rahman</h3>
@@ -57,7 +57,7 @@ permalink: /people/
 <h3 style="color: #89A46B;">PhD Candidate</h3>
 <div style="display: flex; gap: 2rem; margin-bottom: 2rem; align-items: flex-start;">
     <div style="flex: 0 0 150px;">
-        <img src="images/nahidur.png" alt="Nahidur Rahman" loading="lazy" style="width: 100%; border-radius: 50%; object-fit: cover; aspect-ratio: 1/1;" onerror="this.src='https://via.placeholder.com/150?text=NR'">
+        <img src="{{ '/images/nahidur.png' | relative_url }}" alt="Nahidur Rahman" loading="lazy" style="width: 100%; border-radius: 50%; object-fit: cover; aspect-ratio: 1/1;" onerror="this.src='https://via.placeholder.com/150?text=NR'">
     </div>
     <div>
         <h4 style="margin-top: 0;">Nahidur Rahman</h4>
@@ -70,7 +70,7 @@ permalink: /people/
 
 <div style="display: flex; gap: 2rem; margin-bottom: 2rem; align-items: flex-start;">
     <div style="flex: 0 0 150px;">
-        <img src="images/larissa.png" alt="Larissa Scott" loading="lazy" style="width: 100%; border-radius: 50%; object-fit: cover; aspect-ratio: 1/1;" onerror="this.src='https://via.placeholder.com/150?text=LS'">
+        <img src="{{ '/images/larissa.png' | relative_url }}" alt="Larissa Scott" loading="lazy" style="width: 100%; border-radius: 50%; object-fit: cover; aspect-ratio: 1/1;" onerror="this.src='https://via.placeholder.com/150?text=LS'">
     </div>
     <div>
         <h4 style="margin-top: 0;">Larissa Scott</h4>
@@ -81,7 +81,7 @@ permalink: /people/
 
 <div style="display: flex; gap: 2rem; margin-bottom: 2rem; align-items: flex-start;">
     <div style="flex: 0 0 150px;">
-        <img src="images/fatemeh.png" alt="Fatemeh Mohammadian" loading="lazy" style="width: 100%; border-radius: 50%; object-fit: cover; aspect-ratio: 1/1;" onerror="this.src='https://via.placeholder.com/150?text=FM'">
+        <img src="{{ '/images/fatemeh.png' | relative_url }}" alt="Fatemeh Mohammadian" loading="lazy" style="width: 100%; border-radius: 50%; object-fit: cover; aspect-ratio: 1/1;" onerror="this.src='https://via.placeholder.com/150?text=FM'">
     </div>
     <div>
         <h4 style="margin-top: 0;">Fatemeh Mohammadian</h4>
@@ -92,7 +92,7 @@ permalink: /people/
 
 <div style="display: flex; gap: 2rem; margin-bottom: 2rem; align-items: flex-start;">
     <div style="flex: 0 0 150px;">
-        <img src="images/anindita.png" alt="Anindita Roy" loading="lazy" style="width: 100%; border-radius: 50%; object-fit: cover; aspect-ratio: 1/1;" onerror="this.src='https://via.placeholder.com/150?text=AR'">
+        <img src="{{ '/images/anindita.png' | relative_url }}" alt="Anindita Roy" loading="lazy" style="width: 100%; border-radius: 50%; object-fit: cover; aspect-ratio: 1/1;" onerror="this.src='https://via.placeholder.com/150?text=AR'">
     </div>
     <div>
         <h4 style="margin-top: 0;">Anindita Roy</h4>
@@ -108,7 +108,7 @@ permalink: /people/
 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 2rem;">
     <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
         <div style="width: 150px; margin-bottom: 1rem;">
-            <img src="images/arezoo.png" alt="Arezoo Alizadeh" loading="lazy" style="width: 100%; border-radius: 50%; object-fit: cover; aspect-ratio: 1/1;" onerror="this.src='https://via.placeholder.com/150?text=AA'">
+            <img src="{{ '/images/arezoo.png' | relative_url }}" alt="Arezoo Alizadeh" loading="lazy" style="width: 100%; border-radius: 50%; object-fit: cover; aspect-ratio: 1/1;" onerror="this.src='https://via.placeholder.com/150?text=AA'">
         </div>
         <div>
             <h4 style="margin-top:0;">Arezoo Alizadeh</h4>
@@ -120,7 +120,7 @@ permalink: /people/
 
     <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
         <div style="width: 150px; margin-bottom: 1rem;">
-            <img src="images/tasneem.png" alt="Tasneem Hassan Muna" loading="lazy" style="width: 100%; border-radius: 50%; object-fit: cover; aspect-ratio: 1/1;" onerror="this.src='https://via.placeholder.com/150?text=TM'">
+            <img src="{{ '/images/tasneem.png' | relative_url }}" alt="Tasneem Hassan Muna" loading="lazy" style="width: 100%; border-radius: 50%; object-fit: cover; aspect-ratio: 1/1;" onerror="this.src='https://via.placeholder.com/150?text=TM'">
         </div>
         <div>
             <h4 style="margin-top:0;">Tasneem Hassan Muna</h4>
